--- a/package.json
+++ b/package.json
@@ -1,11 +1,17 @@
 {
   "name": "saierhao-game",
+  "productName": "兴服启动器",
   "version": "0.1.0",
+  "main": "src/electron/main.js",
+  "description": "兴服启动器",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "start": "electron .",
+    "build:mac": "electron-builder --mac --x86",
+    "build:win": "electron-builder --win --x64"
   },
   "dependencies": {
     "core-js": "^3.6.5",
@@ -16,12 +22,13 @@
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
     "babel-eslint": "^10.1.0",
+    "electron": "^10.1.3",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
-    "root": true,
+    "root": false,
     "env": {
       "node": true
     },
